--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ celery==3.1.15
 kombu==3.0.23
 Pillow==2.5.3
 pytils==0.3
-django-thumbnailfield==0.2.2
+sorl-thumbnail==11.12.1b
 django-annoying==0.8.0
-
+redis==2.10.3
 tornado==4.0.2
 pika==0.9.14
